# radar-vital-mmwave-60-davao

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PRIVACY.md  README.md  TERMS.md  capacitor.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  radar_vital_live_dashboard_v10_for_v14_1.html  radar_vital_live_dashboard_v11_for_v15_0.html  radar_vital_live_dashboard_v12_for_v16_0.html  radar_vital_live_dashboard_v8_4_3_for_v13_8_0.html  radar_vital_live_dashboard_v8_5_6_for_v13_9_6.html  radar_vital_live_dashboard_v8_5a_for_v13_9a.html  radar_vital_live_dashboard_v8_5b_for_v13_9b.html  radar_vital_live_dashboard_v8_5c_for_v13_9c.html  radar_vital_trainer_v10_for_v14_1.py  radar_vital_trainer_v11_for_v15_0.py  radar_vital_trainer_v12_for_v16_0.py  radar_vital_trainer_v8_4_3_for_v13_8_0.py  radar_vital_trainer_v8_5_6_for_v13_9_6.py  radar_vital_trainer_v8_5a_for_v13_9a.py  radar_vital_trainer_v8_5b_for_v13_9b.py  radar_vital_trainer_v8_5c_for_v13_9c.py  radar_vital_v13_9_6.ino  radar_vital_v14_1_0.ino  radar_vital_v16_0_0.ino  radar_vital_v16_1_0.ino  radar_vital_v16_2_0.ino  radar_vital_v16_3_0.ino  radar_vital_v16_4_0.ino  radar_vital_v8_8.ino  radar_vital_v9_0.ino  radar_vital_v9_4.ino  (+3 more)
.github/: pr64-diagnostic-comment-id  pr64-packaging-diagnostic.txt
.jules/: bolt.md  sentinel.md
assets/: manifest.webmanifest  pair.html  rvt-sw.js  sw.js
docs/: angular-migration-audit.md  i18n.md  milestones.md  mobile_pwa_v12_verification.md  multi-pr-improvement-plan.md  operator-quickstart.md  physical-acceptance-checklist.md  privacy.html  release-and-protection.md  standalone-exe-and-apk-scope.md  terms.html
radar_vital_v13_8_0/: radar_vital_v13_8_0.ino
radar_vital_v13_9a/: radar_vital_v13_8_0.ino  radar_vital_v13_9a.ino
radar_vital_v13_9b/: radar_vital_v13_8_0.ino  radar_vital_v13_9b.ino
radar_vital_v13_9c/: radar_vital_v13_8_0.ino  radar_vital_v13_9c.ino
rvt_trainer/: __init__.py  __main__.py  cli.py  monolith.py  sidecar_entry.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
web/: angular.json  (+4 more)
(+415 files in other folders)
