[package]
name = "radar-vital"
version = "12.0.0-alpha.1"
description = "Mobile-first console for mmWave 60 GHz radar vital-sign monitoring."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
