[package]
name = "radar-vital"
version = "16.0.1"
description = "Mobile-first console for mmWave 60 GHz radar vital-sign monitoring."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
btleplug = "0.11"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]